# mago-zed

./: .gitignore  AGENTS.md  Cargo.toml  README.md  deny.toml
.docs/: architecture.md  encyclopedia.md  quick-start.md  workspace-layout.md
.github/workflows/: lint.yml  test.yml
crates/cli/: Cargo.toml
crates/cli/src/: diagnostics.rs  error.rs  executor.rs  lib.rs  main.rs  parser.rs  runtime.rs
crates/cli/tests/: command_builder_integration.rs  parser.rs
crates/cli/tests/command_builder/: mod.rs
crates/core/: Cargo.toml
crates/core/src/: terms.rs
crates/lsp-server/: Cargo.toml  extension.toml  extension.wasm
crates/lsp-server/examples/: test.php
crates/lsp-server/src/: lib.rs
