[workspace]

members = [
    "crates/core",
    "crates/lsp-server",
    "crates/cli",
]

resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "warn"
unused_must_use = "deny"
unused_extern_crates = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"