[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
mago-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
regex = "1.10"
tower-lsp = "0.20.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
